# flappy-bird

./: .gitignore  README.md  main.cpp
build-flappy-bird-Desktop_x86_windows_msys_pe_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-flappy-bird-Desktop_x86_windows_msys_pe_64bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-2a3737116cb16d05cd1c.json  cmakeFiles-v1-a2f99aba40030ab64d26.json  codemodel-v2-200b41588df19bef5d84.json  codemodel-v2-5a1d604daa6b2cbcf557.json  codemodel-v2-c643c301eb2331da02fd.json  directory-.-Debug-3fff08dc1fa1e9665295.json  directory-.-Debug-8226a498ffa49385d8ae.json  directory-.-Debug-9c173525c94d1763727b.json  index-2024-01-16T23-28-00-0697.json  index-2024-01-17T18-17-44-0114.json  index-2024-01-17T21-56-36-0126.json  target-flappy-bird-Debug-59d550701a68d2c28b57.json  target-flappy-bird-Debug-822675188d2934d266cb.json  target-flappy-bird-Debug-afd0e1302cd609247947.json  target-flappy-bird_autogen-Debug-d17a135dbd029f9ac8f8.json  target-flappy-bird_autogen_timestamp_deps-Debug-eab98e0670c2aed80206.json
build-flappy-bird-Desktop_x86_windows_msys_pe_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-7e563d4bf8c3bc28ee05.json  codemodel-v2-95cd6ab44c4cc305a200.json  codemodel-v2-fcf3fff2b8b95d581689.json  directory-.-Debug-2f32ef1f8a9757eb2bd6.json  index-2024-01-17T17-40-01-0352.json  index-2024-01-17T19-48-09-0162.json  target-flappy-bird-Debug-f476f0c15373c50a66d0.json  target-flappy-bird-Debug-fe316fd885dd670b19b3.json
build-flappy-bird-Desktop_x86_windows_msys_pe_64bit-Debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-flappy-bird-Desktop_x86_windows_msys_pe_64bit-Debug/flappy-bird_autogen/: deps
build-flappy-bird-Desktop_x86_windows_msys_pe_64bit-Debug/flappy-bird_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
flappy-bird/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
